<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.chiralbehaviors.layout</groupId>
	<artifactId>kramer.app</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Kramer - umbrella</name>
	<description>Automatic layout of structured data</description>
	<packaging>pom</packaging>
	<properties>
		<jackson.version>2.19.0</jackson.version>
	</properties>
	<modules>
		<module>kramer</module>
		<module>explorer</module>
		<module>toy-app</module>
		<module>kramer-ql</module>
	</modules>


	<licenses>
		<license>
			<name>Apache License Version 2.0</name>
			<url>http://www.apache.org/licenses/</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Hal Hildebrand</name>
			<email>hal.hildebrand@me.com</email>
			<organization>Chiral Behaviors</organization>
		</developer>
	</developers>

	<scm>
		<connection>git://github.com/ChiralBehaviors/Kramer.git</connection>
		<url>https://github.com/ChiralBehaviors/Kramer</url>
	</scm>

<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.fxmisc.wellbehaved</groupId>
				<artifactId>wellbehavedfx</artifactId>
				<version>0.3.3</version>
			</dependency>
			<dependency>
				<groupId>org.reactfx</groupId>
				<artifactId>reactfx</artifactId>
				<version>2.0-M5</version>
			</dependency>
			<dependency>
				<groupId>com.chiralbehaviors.layout</groupId>
				<artifactId>kramer</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.chiralbehaviors.layout</groupId>
				<artifactId>kramer-ql</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.dataformat</groupId>
				<artifactId>jackson-dataformat-yaml</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.jakarta.rs</groupId>
				<artifactId>jackson-jakarta-rs-json-provider</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>5.14.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.graphql-java</groupId>
				<artifactId>graphql-java</artifactId>
				<version>25.0</version>
			</dependency>
			<dependency>
				<groupId>org.controlsfx</groupId>
				<artifactId>controlsfx</artifactId>
				<version>11.2.3</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.5.32</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish.jersey.core</groupId>
				<artifactId>jersey-client</artifactId>
				<version>3.1.11</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish.jersey.media</groupId>
				<artifactId>jersey-media-json-jackson</artifactId>
				<version>3.1.11</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish.jersey.inject</groupId>
				<artifactId>jersey-hk2</artifactId>
				<version>3.1.11</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>5.22.0</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>25.0.1</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-fxml</artifactId>
				<version>25.0.1</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-web</artifactId>
				<version>25.0.1</version>
			</dependency> 
			<dependency>
				<groupId>jakarta.xml.bind</groupId>
				<artifactId>jakarta.xml.bind-api</artifactId>
				<version>4.0.5</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/ChiralBehaviors/Kramer</url>
		</repository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>25</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
							<goal>test-jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<attach>true</attach>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.14.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.5</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>